# qrcode

./: .gitignore  CMakeLists.txt  README.md
config/: params.yaml
include/: config_loader.hpp  qr_generator.hpp  url_builder.hpp  url_params.hpp
src/: config_loader.cpp  main.cpp  qr_generator.cpp  url_builder.cpp
